--- a/mvp.html
+++ b/mvp.html
@@ -49,9 +49,9 @@
                 ctx.fillStyle = "#00AA00";  
                 ctx.fillRect(0, 0, 500, 300);
 
-                // Goalpost
+                // Goalpost (Updated size)
                 ctx.fillStyle = "#FFFFFF";  
-                ctx.fillRect(450, 100, 30, 100);
+                ctx.fillRect(450, 80, 40, 140); // Enlarged goal
 
                 // Player character
                 ctx.fillStyle = "#FF0000";  
