--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,7 @@
 			<li><a href="emoji.html">My Emoji</a></li>
 			<li><a href="js_func_canvas.html">JS Circles</a></li>
 			<li><a href="canvas_js/house_js.html">JS House</a></li>
+			<li><a href="mvp.html">Soccer Scoring Game</a></li>
 		</ol>
 	</main> 
 	<section>
